Skrevet om til Kotlin. Flyttet enums til bidrag-domain. Refaktorert kode.